--- a/HTML_CSS_Javascript_Exercise/style.css
+++ b/HTML_CSS_Javascript_Exercise/style.css
@@ -16,9 +16,34 @@
 @media (max-width: 576px) {
   
 }
+h2 {
+  text-align: center;
+}
+
+/*p {
+
+  display: table;
+  padding: 10px;
+  background-color: rgba(30, 29, 32, .3);
+  color: white;
+} 
+ul {
+
+  display: table;
+  padding: 10px;
+  background-color: rgba(30, 29, 32, .3);
+  color: white;
+} */		
+div.container {
+  display: block;
+  background-color: rgba(30, 29, 32, .6);
+  background-size: 75%;
+}
+
 #selfie {
   width: 100%;
   height: auto;
+  border-radius: 50%;
 }
 
 * {
@@ -28,6 +53,7 @@
 [class*="col-"] {
   padding: 1rem;
 }
+
 
 /*THIS IS WHERE YOU CHANGE THE BACKGROUND IMAGE!!!!!!*/
 body{
@@ -67,15 +93,17 @@ section{
 }
 
 .column {
-  float: left;
+ 
   padding: 10px;
   height: 300px; 
 }
 
 .column2 {
   float: left;
+  width: max-content;
   padding: 10px;
   height: 300px; 
+
 }
 
 .column3{
@@ -160,10 +188,10 @@ section{
   padding: 10px;
 }
 
-.contact-me{
-  width: 25%;
+#contactme {
+  width: 100%;
   height: 350px;
-  border: 1px solid black;
+ 
 }
 
 .fixed-wrap {
